--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "1.9.4",
     "leaflet-gpx": "2.1.2",
+    "prop-types": "15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "4.2.1",
     "react-scripts": "5.0.1",
+    "sass": "1.80.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint . --ext .js,.jsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +41,13 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://asudre.github.io/distance-run"
+  "homepage": "https://asudre.github.io/distance-run",
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2"
+  }
 }
